- #1097935, double-click open-action in attachment list	
- #1097756, online/offline mode doesn't as expected
- #1098015, vFolder history grows too large
- #1098057, scale image when showing attachments inline
- #1098058, show controls, if showing rfc822message inline
- #1098059, add hide/show button for inline viewer
- #1120945, configuration messed up

Columba v1.0 RC2

New features:
- changed title bar to make it obvious when running in debug mode (mlivingstone)
- updated forms library to v1.0.4 (mlivingstone)
- international IMAP mailbox naming using UTF-7 encoding/decoding (tstich)
- added show next/previous message and unread message actions (fdietz)
- #999257, show/hide message preview panel (fdietz)
- offer three choices for viewing email headers: default, custom, all (fdietz)
- #1000003, doubleclick From: header, displayname included (fdietz)
- #999871, "subject or sender contains" should do filtering on typing (fdietz)
- show recent message count in folder tree using blue font (fdietz)
- cleanup of menu, added many new shortcuts (fdietz)
- #1000002, doubleclick support for addressbook (cliffb53)
- #986558, Dbl-click in contact table should open edit dialog (cliffb53)
- #1011978, Reply All- Keyboard Command (fdietz)
- #999748, in preview panel,full emailadress should be displayed beside (fdietz)
- added a debug-class to easily track down awt-event-dispatcher problems (fdietz)
- added complete sorting and filtering support for contact JTable (fdietz)
- added framemediator caching, this way switching between mail/addressbook
  is now really fast (fdietz)
- added facade access to mailbox folders (fdietz)
- cleanup of the frame package, removed all circular dependencies, simplified design, 
  using only one level of inheritance now. This makes adding new frames very easy. 
  Also introduced the paradigm of a container which encapsulates views. (fdietz)
- speedup of IMAP mailbox selection and auto-check (tstich)
- cleanup of build-system (tstich)